@@ -10,7 +10,6 @@ CollectionWriter::CollectionWriter(const Jid &AStreamJid, const QString &AFileNa
 	FXmlFile = NULL;
 	FXmlWriter = NULL;
 
-	FSecsSum = 0;
 	FGroupchat = false;
 	FNotesCount = 0;
 	FMessagesCount = 0;
@@ -67,11 +66,6 @@ int CollectionWriter::recordsCount() const
 	return FMessagesCount + FNotesCount;
 }
 
-int CollectionWriter::secondsFromStart() const
-{
-	return FSecsSum;
-}
-
 bool CollectionWriter::writeMessage(const Message &AMessage, const QString &ASaveMode, bool ADirectionIn)
 {
 	if (isOpened() && ASaveMode != ARCHIVE_SAVE_FALSE)
@@ -84,11 +78,8 @@ bool CollectionWriter::writeMessage(const Message &AMessage, const QString &ASav
 			FXmlWriter->writeStartElement(ADirectionIn ? "from" : "to");
 
 			int secs = FHeader.start.secsTo(AMessage.dateTime());
-			if (secs >= FSecsSum)
-			{
-				FXmlWriter->writeAttribute("secs",QString::number(secs-FSecsSum));
-				FSecsSum += secs-FSecsSum;
-			}
+			if (secs >= 0)
+				FXmlWriter->writeAttribute("secs",QString::number(secs));
 			else
 				FXmlWriter->writeAttribute("utc",DateTime(AMessage.dateTime()).toX85UTC());
 
@@ -143,6 +134,7 @@ void CollectionWriter::startCollection()
 		FXmlWriter->writeAttribute("subject",FHeader.subject);
 	if (!FHeader.threadId.isEmpty())
 		FXmlWriter->writeAttribute("thread",FHeader.threadId);
+	FXmlWriter->writeAttribute("secsFromLast","false");
 	checkLimits();
 }
 
@@ -173,19 +165,22 @@ void CollectionWriter::writeElementChilds(const QDomElement &AElem)
 		if (node.isElement())
 		{
 			QDomElement elem = node.toElement();
-			FXmlWriter->writeStartElement(elem.nodeName());
-			if (!elem.namespaceURI().isEmpty())
-				FXmlWriter->writeAttribute("xmlns",elem.namespaceURI());
-
-			QDomNamedNodeMap map = elem.attributes();
-			for (uint i =0; i<map.length(); i++)
+			if (elem.tagName() != "thread")
 			{
-				QDomNode attrNode = map.item(i);
-				FXmlWriter->writeAttribute(attrNode.nodeName(),attrNode.nodeValue());
-			}
+				FXmlWriter->writeStartElement(elem.nodeName());
+				if (!elem.namespaceURI().isEmpty())
+					FXmlWriter->writeAttribute("xmlns",elem.namespaceURI());
 
-			writeElementChilds(elem);
-			FXmlWriter->writeEndElement();
+				QDomNamedNodeMap attrMap = elem.attributes();
+				for (uint i =0; i<attrMap.length(); i++)
+				{
+					QDomNode attrNode = attrMap.item(i);
+					FXmlWriter->writeAttribute(attrNode.nodeName(),attrNode.nodeValue());
+				}
+
+				writeElementChilds(elem);
+				FXmlWriter->writeEndElement();
+			}
 		}
 		else if (node.isCharacterData())
 		{
